create html markup

--- a/index.html
+++ b/index.html
@@ -29,9 +29,50 @@
     </style>
   </head>
   <body>
-    <!-- Get insights that help your business grow. Discover the benefits of data
-    analytics and make better decisions regarding revenue, customer experience,
-    and overall efficiency. 10k+ companies 314 templates 12m+ queries -->
+    <main>
+      <section class="section">
+        <!-- PREVIEW CARD COMPONENT -->
+        <div class="preview-card">
+          <!-- IMAGE -->
+          <div class="preview-card__img-wrapper">
+            <div class="preview-card__img--overlay"></div>
+            <img
+              class="preview-card__img"
+              src="./images/image-header-mobile.jpg"
+              alt="3 women sitting around a table with 2 of them on laptops and one of them chatting with someone else"
+            />
+          </div>
+
+          <!-- TEXT CONTENT -->
+          <div class="preview-card__text-content">
+            <h1 class="preview-card__title">
+              Get <span>insights</span> that help your business grow.
+            </h1>
+            <p class="preview-card__text">
+              Discover the benefits of data analytics and make better decisions
+              regarding revenue, customer experience, and overall efficiency.
+              10k+ companies 314 templates 12m+ queries
+            </p>
+
+            <!-- STATS -->
+            <div class="preview-card__stats">
+              <div class="preview-card__companies stat">
+                <p>10k+</p>
+                <p>companies</p>
+              </div>
+              <div class="preview-card__templates stat">
+                <p>314</p>
+                <p>templates</p>
+              </div>
+              <div class="preview-card__queries stat">
+                <p>12M+</p>
+                <p>queries</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <div class="attribution">
       Challenge by
