create mobile layout styles

--- a/index.html
+++ b/index.html
@@ -51,22 +51,21 @@
             <p class="preview-card__text">
               Discover the benefits of data analytics and make better decisions
               regarding revenue, customer experience, and overall efficiency.
-              10k+ companies 314 templates 12m+ queries
             </p>
 
             <!-- STATS -->
             <div class="preview-card__stats">
               <div class="preview-card__companies stat">
-                <p>10k+</p>
-                <p>companies</p>
+                <span>10k+</span>
+                <span>companies</span>
               </div>
               <div class="preview-card__templates stat">
-                <p>314</p>
-                <p>templates</p>
+                <span>314</span>
+                <span>templates</span>
               </div>
               <div class="preview-card__queries stat">
-                <p>12M+</p>
-                <p>queries</p>
+                <span>12M+</span>
+                <span>queries</span>
               </div>
             </div>
           </div>
