make changes in order to use tailwindcss in project

--- a/index.html
+++ b/index.html
@@ -2,82 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/general.css" />
-    <link rel="stylesheet" href="./css/index.css" />
-
-    <title>Frontend Mentor | Stats preview card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Basic Tailwindcss Template</title>
+    <link rel="stylesheet" href="./develop/css/main.css" />
   </head>
   <body>
-    <main>
-      <section class="section">
-        <!-- PREVIEW CARD COMPONENT -->
-        <div class="preview-card">
-          <!-- IMAGE -->
-          <div class="preview-card__img-wrapper">
-            <div class="preview-card__img--overlay"></div>
-            <img
-              class="preview-card__img"
-              src="./images/image-header-mobile.jpg"
-              alt="3 women sitting around a table with 2 of them on laptops and one of them chatting with someone else"
-            />
-          </div>
-
-          <!-- TEXT CONTENT -->
-          <div class="preview-card__text-content">
-            <h1 class="preview-card__title">
-              Get <span>insights</span> that help your business grow.
-            </h1>
-            <p class="preview-card__text">
-              Discover the benefits of data analytics and make better decisions
-              regarding revenue, customer experience, and overall efficiency.
-            </p>
-
-            <!-- STATS -->
-            <div class="preview-card__stats">
-              <div class="preview-card__companies stat">
-                <span>10k+</span>
-                <span>companies</span>
-              </div>
-              <div class="preview-card__templates stat">
-                <span>314</span>
-                <span>templates</span>
-              </div>
-              <div class="preview-card__queries stat">
-                <span>12M+</span>
-                <span>queries</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Daniel Arzanipour</a>.
-    </div>
+    <h1 class="text-9xl text-red-400">Basic Tailwind Template</h1>
+    <a href="./develop/layout/test-file.html">go to test file</a>
   </body>
 </html>
