--- a/index.html
+++ b/index.html
@@ -4,11 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic Tailwindcss Template</title>
+    <title>Stats Preview Card</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./develop/css/main.css" />
+
+    <style>
+      * {
+        border: 1px solid white;
+      }
+      body {
+        border: none;
+      }
+
+      div {
+        border: 1px solid hsl(0, 100%, 76%);
+      }
+    </style>
   </head>
-  <body>
-    <h1 class="text-9xl text-red-400">Basic Tailwind Template</h1>
-    <a href="./develop/layout/test-file.html">go to test file</a>
+  <body
+    class="bg-black text-white min-h-screen flex items-center justify-center"
+  >
+    <!-- <body class="min-h-screen flex items-center justify-center"> -->
+    <main>
+      <!-- STATS COMPONENT -->
+      <div class="" id="statComponent">
+        <!-- TEXT CONTENT -->
+        <div>
+          <!-- title -->
+          <h1>Get <span>insights</span> that help your business grow.</h1>
+          <!-- paragraph -->
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency
+          </p>
+          <!-- statistics -->
+          <div>
+            <!-- companies -->
+            <div>
+              <span>10k+</span>
+              <span>companies</span>
+            </div>
+            <!-- templates -->
+            <div>
+              <span>314</span>
+              <span>templates</span>
+            </div>
+            <!-- queries -->
+            <div>
+              <span>12m+</span>
+              <span>queries</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- IMAGE -->
+        <div
+          class="bg-stats-image-mobile bg-auto w-full h-96 bg-no-repeat"
+        ></div>
+      </div>
+    </main>
   </body>
 </html>
