finish mobile design

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
         </div>
 
         <!-- IMAGE -->
+        <!-- an exact height was required here -->
         <div
-          class="bg-stats-image-mobile bg-contain w-full h-60 bg-no-repeat"
+          style="height: 14.7rem"
+          class="bg-stats-image-mobile bg-contain bg-softViolet bg-blend-multiply bg-no-repeat w-full opacity-90"
         ></div>
       </div>
     </main>
