styling for desktop size finished

--- a/index.html
+++ b/index.html
@@ -33,39 +33,47 @@
     <main>
       <!-- STATS COMPONENT -->
       <div
-        class="bg-darkDesaturatedBlue w-80 rounded-xl flex flex-col-reverse md:flex-row md:w-auto md:h-[25.9375rem]"
+        class="bg-darkDesaturatedBlue w-80 rounded-xl flex flex-col-reverse md:flex-row md:w-[67.625rem] md:h-[25.9375rem]"
         id="statComponent"
       >
         <!-- TEXT CONTENT -->
         <div class="container mx-auto px-2">
           <!-- title -->
           <h1
-            class="font-bold text-3xl mt-12 mb-4 text-center md:mb-0 md:mt-10"
+            class="font-bold text-3xl mt-12 mb-4 text-center md:px-20 md:mb-6"
           >
             Get <span class="text-softViolet">insights</span> that help your
             business grow.
           </h1>
           <!-- paragraph -->
-          <p class="text-mainParaWhite mb-10 text-center md:mb-0 md:mt-2">
+          <p class="text-mainParaWhite mb-10 text-center md:px-20 md:mb-20">
             Discover the benefits of data analytics and make better decisions
             regarding revenue, customer experience, and overall efficiency
           </p>
           <!-- statistics -->
-          <div class="flex flex-col items-center">
+          <div
+            class="flex flex-col items-center md:flex-row md:items-start md:justify-between md:px-20"
+          >
             <!-- companies -->
             <div class="mb-5">
               <span class="font-bold text-2xl block text-center">10k+</span>
-              <span>companies</span>
+              <span class="uppercase text-xs text-mainParaWhite tracking-[2px]"
+                >companies</span
+              >
             </div>
             <!-- templates -->
             <div class="mb-5">
               <span class="font-bold text-2xl block text-center">314</span>
-              <span>templates</span>
+              <span class="uppercase text-xs text-mainParaWhite tracking-[2px]"
+                >templates</span
+              >
             </div>
             <!-- queries -->
-            <div class="mb-5">
+            <div class="mb-5 md:mb-2">
               <span class="font-bold text-2xl block text-center">12m+</span>
-              <span>queries</span>
+              <span class="uppercase text-xs text-mainParaWhite tracking-[2px]"
+                >queries</span
+              >
             </div>
           </div>
         </div>
