fix tablet styling

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
     <main>
       <!-- STATS COMPONENT -->
       <div
-        class="bg-darkDesaturatedBlue w-80 rounded-xl flex flex-col-reverse md:flex-row md:w-[67.625rem] md:h-[25.9375rem]"
+        class="bg-darkDesaturatedBlue w-80 rounded-xl flex flex-col-reverse xl:flex-row xl:w-[67.625rem] xl:h-[25.9375rem]"
         id="statComponent"
       >
         <!-- TEXT CONTENT -->
         <div class="container mx-auto px-2">
           <!-- title -->
           <h1
-            class="font-bold text-3xl mt-12 mb-4 text-center md:px-20 md:mb-6"
+            class="font-bold text-3xl mt-12 mb-4 text-center xl:px-20 xl:mb-6"
           >
             Get <span class="text-softViolet">insights</span> that help your
             business grow.
           </h1>
           <!-- paragraph -->
-          <p class="text-mainParaWhite mb-10 text-center md:px-20 md:mb-20">
+          <p class="text-mainParaWhite mb-10 text-center xl:px-20 xl:mb-20">
             Discover the benefits of data analytics and make better decisions
             regarding revenue, customer experience, and overall efficiency
           </p>
           <!-- statistics -->
           <div
-            class="flex flex-col items-center md:flex-row md:items-start md:justify-between md:px-20"
+            class="flex flex-col items-center xl:flex-row xl:items-start xl:justify-between xl:px-20"
           >
             <!-- companies -->
             <div class="mb-5">
@@ -69,7 +69,7 @@
               >
             </div>
             <!-- queries -->
-            <div class="mb-5 md:mb-2">
+            <div class="mb-5 xl:mb-2">
               <span class="font-bold text-2xl block text-center">12m+</span>
               <span class="uppercase text-xs text-mainParaWhite tracking-[2px]"
                 >queries</span
@@ -81,7 +81,7 @@
         <!-- IMAGE -->
         <!-- an exact height was required here -->
         <div
-          class="bg-stats-image-mobile bg-contain bg-softViolet bg-blend-multiply bg-no-repeat w-full opacity-90 rounded-xl h-[14.7rem] md:bg-cover md:h-auto md:rounded-tl-none md:rounded-bl-none"
+          class="bg-stats-image-mobile bg-contain bg-softViolet bg-blend-multiply bg-no-repeat w-full opacity-90 rounded-xl h-[14.7rem] xl:bg-cover xl:h-auto xl:rounded-tl-none xl:rounded-bl-none"
         ></div>
       </div>
     </main>
