fix image not showing on github pages

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
         </div>
 
         <!-- IMAGE -->
+        <!-- quick fix for a little issue -->
         <div
-          class="bg-stats-image-mobile bg-contain bg-softViolet bg-blend-multiply bg-no-repeat w-full opacity-90 rounded-xl h-[14.7rem] xl:bg-cover xl:h-auto xl:rounded-tl-none xl:rounded-bl-none"
+          style="border-bottom: 1px solid black"
+          class="bg-stats-image-mobile bg-contain bg-softViolet bg-blend-multiply bg-no-repeat w-full opacity-90 rounded-tl-xl rounded-tr-xl h-[14.7rem] xl:bg-cover xl:h-auto xl:rounded-tl-none xl:rounded-bl-none"
         ></div>
       </div>
     </main>
