--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- quick fix for a little issue -->
         <div
           style="border-bottom: 1px solid black"
-          class="bg-stats-image-mobile bg-contain bg-softViolet bg-blend-multiply bg-no-repeat w-full opacity-90 rounded-tl-xl rounded-tr-xl h-[14.7rem] xl:bg-cover xl:h-auto xl:rounded-tl-none xl:rounded-bl-none"
+          class="bg-stats-image-mobile bg-contain bg-blend-multiply bg-no-repeat w-full opacity-90 rounded-tl-xl rounded-tr-xl h-[14.7rem] xl:bg-cover xl:h-auto xl:rounded-tl-none xl:rounded-bl-none"
         ></div>
       </div>
     </main>
